--- a/buttonDataSetup.ini
+++ b/buttonDataSetup.ini
@@ -1718,6 +1718,7 @@ AddController "Controller_017"
 	AddMap PC_CONTROL_BUTTON08 VB_FE_RT
 	AddMap PC_CONTROL_BUTTON07 VB_AI_RB
 	AddMap PC_CONTROL_BUTTON07 VB_FE_RB
+AddController "No Controller"
 AddController "Controller_018"
 	AddAlias "FireStorm Dual Analog 2"
 	AddAlias "Thrustmaster DT Rumble"
